# rohmpc-anonymous

./: README.md
src/catkin_ws/src/mpc/mpc_base/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_base/include/mpc_base/: configuration_mpc.h  controller_base.h  interface_base.h  module_handler_base.h  reconfigure_callback_base.h  solver_base.h
src/catkin_ws/src/mpc/mpc_core/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_core/include/mpc_core/: controller.h  interface.h  reconfigure_callback.h
src/catkin_ws/src/mpc/mpc_core/include/mpc_core/functions/: error_function.h  update_mpc_configuration.h
src/catkin_ws/src/mpc/mpc_core/src/: controller.cpp  interface.cpp
src/catkin_ws/src/mpc/mpc_core/src/functions/: error_function.cpp  update_mpc_configuration.cpp
src/catkin_ws/src/mpc/mpc_modules/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_modules/include/mpc_modules/constraints/: static_polyhedron_constraints.h
src/catkin_ws/src/mpc/mpc_modules/include/mpc_modules/loader/: module_handler.h
src/catkin_ws/src/mpc/mpc_modules/include/mpc_modules/objectives/: goal_oriented.h  reference_trajectory.h
src/catkin_ws/src/mpc/mpc_modules/include/mpc_modules/types/: module.h  realtime_data.h  tracked.h
src/catkin_ws/src/mpc/mpc_modules/src/constraints/: static_polyhedron_constraints.cpp
src/catkin_ws/src/mpc/mpc_modules/src/loader/: module_handler.cpp
src/catkin_ws/src/mpc/mpc_modules/src/objectives/: goal_oriented.cpp  reference_trajectory.cpp
src/catkin_ws/src/mpc/mpc_msgs/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_msgs/msg/: ConstraintsOverHorizon.msg  Float64Array.msg  GoalPose.msg  InterpData.msg  MpcHeader.msg  ReferenceTrajectoryConstraints.msg  ScalarOverHorizon.msg  StartMpcLayer.msg  TrajectoryOverHorizon.msg
src/catkin_ws/src/mpc/mpc_solver/: CMakeLists.txt  package.xml  setup.py  setup_script.sh
src/catkin_ws/src/mpc/mpc_solver/include/mpc_solver/core/: helper_functions.h  solver.h
src/catkin_ws/src/mpc/mpc_solver/scripts/include/: control_modules.py  dynamics.py  helpers.py  inequality.py  objective.py  setup_script.py  systems.py
src/catkin_ws/src/mpc/mpc_solver/scripts/include/generation_scripts/: generate_cmake.py  generate_dynamic_reconfigure_files.py  generate_files.py  generate_solver.py
src/catkin_ws/src/mpc/mpc_solver/scripts/include/offline_computations/: offline_computations.py
src/catkin_ws/src/mpc/mpc_solver/scripts/include/offline_computations/mpc-sdp/: FalconModelT.m  README.md  bayesopt_compute_c_P_K_rho_wbar_beta.m  compute_H1_bar.m  compute_H_bar.m  compute_L.m  compute_L_separate.m  compute_P.m  compute_Pdelta_Kdelta_cs_co.m  compute_W_bar.m  compute_beta.m  compute_check_P_LMIs.m  compute_check_RPI_LMIs.m  compute_check_X_LMIs.m  (+28 more)
src/catkin_ws/src/mpc/mpc_solver/scripts/systems/falcon/: pmpc_settings.py  tmpc_settings.py
src/catkin_ws/src/mpc/mpc_solver/scripts/systems/hovergames/: pmpc_settings.py  smpc_settings.py  tmpc_settings.py
src/catkin_ws/src/mpc/mpc_solver/src/core/: helper_functions.cpp
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/config/: common.yaml  falcon_hmpc.yaml
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/config/dynamic_reconfigure/: pmpc_reconfigure_params.yaml  tmpc_reconfigure_params.yaml
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/include/mpc_falcon/: falcon_interface.h  mpc.h
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/scripts/: goal_publisher.py
src/catkin_ws/src/mpc/mpc_systems/mpc_falcon/src/: falcon_interface.cpp  mpc.cpp  mpc_control_node.cpp
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/config/: common.yaml  px4_hmpc.yaml  px4_smpc.yaml  simplesim_hmpc.yaml  simplesim_smpc.yaml
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/config/dynamic_reconfigure/: pmpc_reconfigure_params.yaml  smpc_reconfigure_params.yaml  tmpc_reconfigure_params.yaml
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/include/mpc_hovergames/: hovergames_drone_interface.h  hovergames_px4_interface.h  hovergames_simplesim_interface.h
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/launch/: main.launch
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/rviz/: hmpc.rviz  smpc.rviz
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/scripts/: goal_publisher.py  goal_publisher_gui.py
src/catkin_ws/src/mpc/mpc_systems/mpc_hovergames/src/: hovergames_drone_interface.cpp  hovergames_px4_interface.cpp  hovergames_simplesim_interface.cpp  mpc_control_node.cpp  mpc_control_node_2_layer.cpp
src/catkin_ws/src/mpc/mpc_tools/: CMakeLists.txt  package.xml
src/catkin_ws/src/mpc/mpc_tools/include/mpc_tools/: RK4.h  ROS_timer_handler.h  ThreadPool.h  benchmarker.h  data_saver_json.h  eigen_ros.h  eigen_std.h  instrumentation_timer.h  math.h  printing.h  robot_region.h  ros_visuals.h  traj_gen.h
src/catkin_ws/src/mpc/mpc_tools/profiling/: README.md  concatenate_profiling.sh
src/catkin_ws/src/mpc/mpc_tools/recorded_data/: .gitignore  2025-08-08_09-48__ReferenceTrajectory_StaticPolyhedronConstraints_0.json  2025-08-08_11-47__ReferenceTrajectory_StaticPolyhedronConstraints_0.json  README.md
src/catkin_ws/src/mpc/mpc_tools/src/: RK4.cpp  ROS_timer_handler.cpp  ThreadPool.cpp  benchmarker.cpp  data_saver_json.cpp  eigen_std.cpp  instrumentation_timer.cpp  robot_region.cpp  ros_visuals.cpp  traj_gen.cpp
src/catkin_ws/src/occupancygrid_creator/: CMakeLists.txt  README.md  package.xml
src/catkin_ws/src/occupancygrid_creator/config/: map_falcon_rohmpc_with_obstacles.yaml  map_falcon_rohmpc_without_obstacles.yaml  map_hovergames_hmpc.yaml  map_hovergames_hmpc_corridor.yaml
src/catkin_ws/src/occupancygrid_creator/include/occupancygrid_creator/: occupancygrid_creator.h  ros_visuals.h
src/catkin_ws/src/occupancygrid_creator/launch/: occupancygrid.launch
src/catkin_ws/src/occupancygrid_creator/src/: occupancygrid_creator.cpp  occupancygrid_creator_node.cpp  ros_visuals.cpp
src/catkin_ws/src/rosbag2json/: package.xml
(+67 files in other folders)
