<?xml version="1.0"?>
<package format="2">
  <name>mpc_modules</name>
  <version>0.0.1</version>
  <description>The mpc_modules package</description>

  <maintainer email="foo@bar.com">Author Name</maintainer>
  <author>Author Name</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>decomp_util</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>mpc_tools</depend>
  <depend>mpc_base</depend>
  <depend>mpc_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>