<?xml version="1.0"?>
<package format="2">
  <name>mpc_solver</name>
  <version>0.0.1</version>
  <description>The mpc_solver package</description>

  <maintainer email="foo@bar.com">Author Name</maintainer>
  <author>Author Name</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>mpc_base
  </depend>

  <export>
  </export>
</package>