<?xml version="1.0"?>
<package format="2">
  <name>mpc_tools</name>
  <version>0.0.1</version>
  <description>The mpc_tools package</description>

  <maintainer email="foo@bar.com">Author Name</maintainer>
  <author>Author Name</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>